# pdc-lbgillespie-hpc

./: README.md  analysis.py
code/: CMakeLists.txt  cell-twofactor.cu  cell-twofactor.cuh  cell-twofactor.h  lb-gillespie.cu  lb-gillespie.cuh  lb-gillespie.h  timers.h  twofactor.cpp  twofactor.cu
notebooks/: abstract.ipynb  article.ipynb
